# faiss_grpc

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakeLists.txt_online  Dockerfile  Dockerfile.amd64  Dockerfile.arm64  MANIFEST.in  README.md  adsafs.tes  build.sh  build_img.sh  buildimg.ps1  buildimg.sh  cfsw  conanfile.txt  config.json  dev_env.dockerfile  docker-compose.yml  faiss_grpc.cc  faiss_grpc_serv.cc  faiss_grpc_serv.h  faiss_rpc.grpc.pb.h  faiss_rpc.pb.h  indexgen.py  make_index.py  makefile  pmfprc.json  pyproject.toml  query.txt  requirements.txt  runtest.sh  serv.cc  setup.cfg  setup.cfg_bak  setup.py  test.sh
.devcontainer/: devcontainer.json
bak/: CMakeLists.txt_bak  Dockerfile
bak/src/: faiss_grpc.cc  faiss_rpc_serv.cc  faiss_rpc_serv.h
cmake/: FindFaiss.cmake
faiss_grpc/: __main__.py  make_index.py
faiss_grpc/faiss_rpc/: __init__.py  aiohanddler.py  aioserv.py  cli.py  cli_example.py  faiss_rpc_pb2.py  faiss_rpc_pb2_grpc.py  faiss_search.py  index.py
indexes/: test.index
pbschema/: faiss_grpc.proto  faiss_rpc.proto
src/: faiss_grpc.cc  faiss_rpc.cc  faiss_rpc_serv.cc  faiss_rpc_serv.h  main.cc
src/faiss_grpc_index_manager/: exception.h  index_info.cc  index_info.h  index_manager.cc  index_manager.h  utils.cc  utils.h
src/faiss_grpc_pb/: faiss_grpc.grpc.pb.cc  faiss_grpc.grpc.pb.h  faiss_grpc.pb.cc  faiss_grpc.pb.h
src/faiss_grpc_serv/: faiss_grpc_serv.h  handler.cc  serv.cc
test/: cfswattcher.cc  faiss_index_manager.cc  fswattcher.cc  jsonload  jsonload.cc
testquery/: metaquery.json  reloadquery.json  searchquery.json
