[metadata]
name = faiss_grpc
version = 0.0.0
author = hsz12
author_email = hsz1273327@gmail.com
description = faiss的grpc封装用于加载faiss的index并提供搜索topk的服务
long_description = file: README.md, CHANGELOG.md, LICENSE
long_description_content_type = text/markdown
keywords = 
license = MIT License
classifiers = 
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = True
packages = find:
tests_requires =
    pylint >= 2.7.2
setup_requires = 
	Cython >= 0.29.22
install_requires = 
	faiss-cpu >= 1.6.5
	grpcio >= 1.35.0
	grpcio-reflection >= 1.35.0
	grpcio-health-checking >= 1.35.0
	grpcio-tools >= 1.35.0
	grpcio-channelz >= 1.35.0
	schema-entry >= 0.1.4
	pyloggerhelper >= 0.0.2
	numpy >= 1.19.5
	uvloop >= 0.14.0
	watchdog >= 2.0.2
	readerwriterlock >= 1.0.8

[options.packages.find]
include = faiss_grpc
exclude = tests

[build_ext]
inplace = 1

[build]
compiler = msvc

